[package]
name = "rusty_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5", features = ["macros"] }
httpc-test = "0.1.9"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt", "macros", "full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
